<resources>
    <string name="app_name">route-task</string>
    <string name="favorite">favorite</string>
    <string name="what_do_you_search_for">what do you search for?</string>
    <string name="logo">logo</string>
    <string name="cartIcon">cartIcon</string>
    <string name="nike_air_jordon">Nike Air Jordon</string>
    <string name="black_color">Black color</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="egp_1_500">EGP 1,500</string>
    <string name="egp_1_200">EGP 1,200</string>
    <string name="total_price">Total price</string>
    <string name="cart">Cart</string>
    <string name="something_went_wrong">Something Went Wrong,\nPlease check your internet connection.</string>
    <string name="try_again">Try Again</string>
    <string name="review">Review</string>
    <string name="star">star</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>