<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="com.example.domain.products.model.ProductsItemEntity" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        app:cardCornerRadius="@dimen/margin_20"
        app:strokeColor="@color/stroke_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/medium_margin">

            <ImageView
                android:id="@+id/product_img"
                android:layout_width="@dimen/width_180"
                android:layout_height="@dimen/width_120"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:url="@{product.component1()[0]}"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/product_name"
                style="@style/TextView.Title"
                android:layout_width="@dimen/constrain_dimen"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:fontFamily="@font/poppins_medium"
                android:lines="1"
                android:maxLines="1"
                android:text="@{product.title}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_img" />

            <TextView
                android:id="@+id/product_desc"
                style="@style/TextView.Description"
                android:layout_width="@dimen/constrain_dimen"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_medium"
                android:lines="1"
                android:maxLines="1"
                android:text="@{product.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_name" />

            <androidx.cardview.widget.CardView
                android:id="@+id/add_to_wishlist_btn"
                style="@style/CardViewStyle"
                android:layout_width="@dimen/size30"
                android:layout_height="@dimen/size30"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:padding="@dimen/margin_20"
                app:cardElevation="@dimen/constrain_dimen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/wishlist_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_2"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/margin_2"
                    android:layout_marginBottom="@dimen/margin_2"
                    android:src="@drawable/add_to_wishlist_selector" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/product_price"
                style="@style/TextView.Price"
                android:layout_width="@dimen/constrain_dimen"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/egp_1_200"
                app:layout_constraintStart_toStartOf="@id/product_desc"
                app:layout_constraintTop_toBottomOf="@id/product_desc" />

            <TextView
                android:id="@+id/product_old_price"
                style="@style/TextView.OldPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                app:layout_constraintBottom_toBottomOf="@id/product_price"
                app:layout_constraintStart_toEndOf="@id/product_price"
                app:layout_constraintTop_toTopOf="@id/product_price"
                tools:text="@string/egp_1_500" />

            <TextView
                android:id="@+id/review_tv"
                style="@style/TextView.Review"
                android:layout_width="@dimen/constrain_dimen"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/review"
                app:layout_constraintStart_toStartOf="@id/product_price"
                app:layout_constraintTop_toBottomOf="@id/product_price" />

            <TextView
                android:id="@+id/review_value_tv"
                style="@style/TextView.ReviewValue"
                android:layout_width="@dimen/constrain_dimen"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:textSize="@dimen/textSize_14"
                app:layout_constraintStart_toEndOf="@id/review_tv"
                app:layout_constraintTop_toBottomOf="@id/product_price"
                tools:text="(4.5)" />

            <ImageView
                android:layout_width="@dimen/margin_18"
                android:layout_height="@dimen/margin_18"
                android:layout_marginStart="@dimen/medium_margin"
                android:contentDescription="@string/star"
                android:paddingTop="@dimen/medium_margin"
                android:src="@drawable/ic_star"
                app:layout_constraintStart_toEndOf="@id/review_value_tv"
                app:layout_constraintTop_toTopOf="@id/review_value_tv" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/add_to_cart_btn"
                android:layout_width="@dimen/size30"
                android:layout_height="@dimen/size30"
                android:layout_marginEnd="@dimen/medium_margin"
                android:src="@drawable/plus_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
